--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "@loopback/rest-explorer": "^7.0.3",
     "@loopback/service-proxy": "^7.0.3",
     "@sourceloop/authentication-service": "^19.1.3",
+    "@sourceloop/core": "^14.1.0",
     "jsonwebtoken": "^9.0.2",
     "loopback-connector-postgresql": "^7.1.3",
     "loopback4-authentication": "^12.0.2",
+    "loopback4-authorization": "^7.0.2",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
